--- a/angular.json
+++ b/angular.json
@@ -23,9 +23,15 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
-            ],
-            "scripts": []
+              "src/styles.css",
+              "../node_modules/font-awesome/css/font-awesome.css",
+              "./node_modules/bootstrap/dist/css/bootstrap.css"
+      ],
+      "scripts": [
+        "./node_modules/jquery/dist/jquery.js",
+        "./node_modules/tether/dist/js/tether.js",
+        "./node_modules/bootstrap/dist/js/bootstrap.js"
+            ]
           },
           "configurations": {
             "production": {
@@ -72,9 +78,14 @@
             "tsConfig": "src/tsconfig.spec.json",
             "karmaConfig": "src/karma.conf.js",
             "styles": [
-              "src/styles.css"
+              "src/styles.css",
+              "../node_modules/bootstrap/dist/css/bootstrap.css"
             ],
-            "scripts": [],
+            "scripts": [
+              "../node_modules/jquery/dist/css/jquery.js",
+              "../node_modules/tether/dist/js/tether.js",
+              "../node_modules/bootstrap/dist/js/bootstrap.js" 
+            ],
             "assets": [
               "src/favicon.ico",
               "src/assets"
