--- a/package.json
+++ b/package.json
@@ -20,8 +20,14 @@
     "@angular/platform-browser": "^6.0.3",
     "@angular/platform-browser-dynamic": "^6.0.3",
     "@angular/router": "^6.0.3",
+    "angular2-flash-messages": "^2.0.5",
+    "angularfire2": "^5.0.0-rc.10",
+    "bootstrap": "4.0.0-alpha.6",
     "core-js": "^2.5.4",
+    "firebase": "^5.0.4",
+    "jquery": "^3.3.1",
     "rxjs": "^6.0.0",
+    "tether": "^1.4.4",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
