--- a/package.json
+++ b/package.json
@@ -20,20 +20,23 @@
     "@angular/platform-browser": "^6.0.3",
     "@angular/platform-browser-dynamic": "^6.0.3",
     "@angular/router": "^6.0.3",
+    "angular-font-awesome": "^3.1.2",
     "angular2-flash-messages": "^2.0.5",
     "angularfire2": "^5.0.0-rc.10",
     "bootstrap": "^4.0.0-alpha.6",
     "core-js": "^2.5.4",
     "firebase": "^5.0.4",
     "firebase-admin": "^5.12.1",
+    "font-awesome": "^4.7.0",
     "jquery": "^3.3.1",
     "rxjs": "^6.0.0",
+    "save": "^2.3.2",
     "tether": "^1.4.4",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.6.8",
-    "@angular/cli": "~6.0.8",
+    "@angular/cli": "^6.1.5",
     "@angular/compiler-cli": "^6.0.3",
     "@angular/language-service": "^6.0.3",
     "@types/jasmine": "~2.8.6",
